<resources>
    <string name="app_name">R-360 CMMS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">What section of the hospital?</string>
    <string name="second_fragment_label">Which device?</string>
    <string name="third_fragment_label">Device Info</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello world!</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backButton">Back</string>
    <string name="continueButton">Continue</string>
    <string name="addButton">Add</string>
    <string name="minus">Minus</string>
    <string name="what_device_text">What Device?</string>
    <string name="what_category_text">What Category?</string>
    <string name="defaultString">default</string>
    <string name="count_50_test_string">50</string>
    <string name="l3count_string">Count:</string>
    <string name="welcome_String">RICE 360 CMMS</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="saveButtonText">Save</string>
    <string name="loginButtonText">Log In</string>
    <string name="preferences_file_key">PREFERENCES_FILE_KEY</string>
    <string name="authkey_key">AuthKey</string>
    <string name="url_key">URL</string>
    <string name="default_keys">DEFAULT_KEYS</string>
    <string name="authenticateText">Authenticate</string>
    <string name="hint">hint</string>
    <string name="search">Search!</string>

</resources>