<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/L1Fragment"
        android:name="com.example.myapplication.L1Fragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_l1">
        <action
            android:id="@+id/action_L1Fragment_to_L2Fragment"
            app:destination="@id/L2Fragment" />
    </fragment>
    <fragment
        android:id="@+id/L2Fragment"
        android:name="com.example.myapplication.L2Fragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_l2">

        <argument
            android:name="categoryPassed"
            android:defaultValue="null"
            app:argType="string" />
        <action
            android:id="@+id/action_L2Fragment_to_L1Fragment"
            app:destination="@id/L1Fragment" />
        <action
            android:id="@+id/action_L2Fragment_to_L3Fragment"
            app:destination="@id/L3Fragment" />
    </fragment>
    <fragment
        android:id="@+id/L3Fragment"
        android:name="com.example.myapplication.L3Fragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_l3">
        <action
            android:id="@+id/action_L3Fragment_to_L2Fragment"
            app:destination="@id/L2Fragment" />
        <argument
            android:name="devicePassed"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.myapplication.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome_screen">
        <action
            android:id="@+id/action_welcomeFragment_to_L1Fragment"
            app:destination="@id/L1Fragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_QRFragment"
            app:destination="@id/QRFragment" />
    </fragment>
    <fragment
        android:id="@+id/QRFragment"
        android:name="com.example.myapplication.QRFragment"
        android:label="QRFragment" />
</navigation>