<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/L3ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_neutral"
    tools:context=".L3Fragment">

    <Button
        android:id="@+id/l3backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/l3minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/l3countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/brown_neutral"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/l3minusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/l3deviceText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/l3deviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultString"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/brown_neutral"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/l3minusButton"
        app:layout_constraintEnd_toStartOf="@+id/l3countText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

</androidx.constraintlayout.widget.ConstraintLayout>